# zooba_workspace

./: .gitignore  .gitmodules  README.md  controller_updates_summary.md  ms1_hardware_demo.ino  plot_state_csv.py  plot_telemetry.py  tailscale_dds.xml  test_images.py
firmware/low_level_controller/: low_level_controller.ino
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/perception/lib/perception/: sign_detection_node  vehicle_actuator_node
install/perception/share/perception/: package.sh  package.xml
log/: latest_build
milestone2/: ms2.ipynb  ms2_hardware_demo.ino
src/high_level_controller/: package.xml  setup.py
src/high_level_controller/config/: high_level_controller.yaml  path_planner_config.yaml
src/high_level_controller/high_level_controller/: __init__.py  command_arbiter_node.py  path_planner_node.py  perception_controller_node.py  traffic_light_controller_node.py
src/high_level_controller/launch/: closed_loop_hw.launch.py  high_level_controller.launch.py  high_level_perception.launch.py
src/localization/: package.xml  setup.py
src/localization/config/: ekf_localization.yaml
src/localization/launch/: ekf_localization.launch.py  ground_truth.launch.py  odometry.launch.py
src/localization/localization/: __init__.py  efk_core.py  ekf_core.py  ekf_localization_node.py  ekf_sim_node.py  ground_truth_node.py  odometry_node.py  sensor_noise_node.py  state_comparison_node.py  state_plot_node.py  state_plot_noisy_vs_ekf_node.py
src/localization/test/: test_ekf_core.py
src/low_level_controller/: package.xml  setup.cfg  setup.py
src/low_level_controller/launch/: closed_loop_hw.launch.py  low_level_controller.launch.py
src/low_level_controller/low_level_controller/: __init__.py  low_level_controller_node.py
src/low_level_controller/test/: __init__.py
src/mid_level_controller/: package.xml  setup.cfg  setup.py
src/mid_level_controller/config/: closed_loop_control.yaml  controller_params.yaml  vehicle_constraints.yaml  vehicle_params.yaml
src/mid_level_controller/launch/: joy_teleop.launch.py  mid_level_controller.launch.py  teleop.launch.py
src/mid_level_controller/mid_level_controller/: __init__.py  control_merger_node.py  lateral_control_node.py  nonholonomic_constraints_node.py  odometry_node.py  open_loop_node.py  speed_control_node.py  teleop_joy_node.py  teleop_keyboard_node.py  teleop_ps_node.py
src/perception/: package.xml  setup.py
src/perception/config/: sign_detection_params.yaml  traffic_light_detector.yaml
src/perception/launch/: sign_detection.launch.py
src/perception/perception/: test_sign_detection.py
src/perception/perception/model/: best_int8.tflite  custom_sign_classifier_int8.tflite
src/perception/perception/nodes/: camera_publisher.py  camera_publisher_node.py  dashboard_node.py  debug_viewer.py  sign_detection_node.py  traffic_light_detector_node.py
src/perception/scripts/: plot_perception_kpi.m  plot_perception_kpi.py
src/vehicle_interfaces/: CMakeLists.txt  package.xml
src/vehicle_interfaces/msg/: ImuData.msg  VehicleCmd.msg  VehicleConstraints.msg  VehicleFeedback.msg  VehicleState.msg
src/zooba_simulation/: package.xml  setup.cfg  setup.py
src/zooba_simulation/config/: digital_twin.rviz
src/zooba_simulation/launch/: closed_loop_sim.launch.py  closed_loop_sim_track.launch.py  closed_loop_sim_track_noisy.launch.py  controll_sim.launch.py  digital_twin.launch.py  full_sim.launch.py  simulation.launch.py  test_track.launch.py
src/zooba_simulation/worlds/: track_1.world  track_2.world  track_3.world  two_lane.world
src/zooba_simulation/zooba_simulation/: __init__.py  plan.md  rviz_vehicle_node.py  sim_bridge_node.py  sim_cmd_merger_node.py  sim_lateral_control_node.py  sim_smc_lateral_control_node.py  sim_speed_control_node.py
zooba_kpi/: sign_detection_kpi.csv  traffic_light_kpi.csv
