<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>low_level_controller</name>
  <version>0.1.0</version>
  <description>Low-level controller for autonomous vehicle: bridges ROS2 velocity/heading commands to Arduino servo and DC motor control via serial</description>
  <maintainer email="ahm.mostafa03@gmail.com">ahmed</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>vehicle_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
