<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zooba_simulation</name>
  <version>0.1.0</version>
  <description>Simulation bridge: translates VehicleCmd to Gazebo Ackermann steering vehicle topics</description>
  <maintainer email="ahm.mostafa03@gmail.com">ahmed</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>vehicle_interfaces</depend>

  <exec_depend>gazebo_ackermann_steering_vehicle</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
